# pasqal_project

./: Neutral_Atoms_maxcut.ipynb  QAOA_maxcut_neutral_atoms.ipynb  QAOA_tests.ipynb  README.md  VQAA_maxcut_neutral_atoms.ipynb  analysis_QAOA.ipynb  analysis_vqaa.ipynb  encoding_tests.ipynb  pyproject.toml  requirements.txt  short_Neutral_Atoms_maxcut_version_3.ipynb  short_VQAA_Neutral_Atoms_maxcut_version_3.ipynb  vqaa_tests.ipynb
src/: mapping.py  quantum_solver_qaoa.py  quantum_solver_vqaa.py  qubo_tools.py
